fix: failing traceabilityE2EScenario15()
Signed-off-by: Victor Yanev <victor.yanev@limechain.tech>